# AirCube

./: .gitignore  CONTRIBUTING.md  FIRMWARE_UPDATE.md  HOME_ASSISTANT.md  KB-AirCube.md  README.md  SMARTTHINGS.md
custom_patch/v1.3_2MB/: 2MB_PATCH_PROCESS.md  README.md
firmware/: CMakeLists.txt  README.md  partitions_zigbee.csv  sdkconfig.defaults
firmware/main/: CMakeLists.txt  Kconfig.projbuild  button.c  button.h  ens16x_driver.c  ens16x_driver.h  ens210.c  ens210.h  environmental.c  environmental.h  history.c  history.h  i2c_driver.c  i2c_driver.h  led.c  led.h  led_color_lib.c  led_color_lib.h  main.c  serial_protocol.c  serial_protocol.h  ws2812_control.h  zigbee.c  zigbee.h
kicad/: AirCube v1.0 BOM.csv  AirCube-top-pos.csv  AirCube.kicad_pcb  AirCube.kicad_prl  AirCube.kicad_pro  AirCube.kicad_sch  AirCube.step  fp-info-cache
kicad/gerbers/: AirCube-B_Cu.gbr  AirCube-B_Mask.gbr  AirCube-B_Paste.gbr  AirCube-B_Silkscreen.gbr  AirCube-Edge_Cuts.gbr  AirCube-F_Cu.gbr  AirCube-F_Mask.gbr  AirCube-F_Paste.gbr  AirCube-F_Silkscreen.gbr  AirCube-NPTH.drl  AirCube-PTH.drl  AirCube-job.gbrjob
scripts/: AirCubeTray.spec  aircube.spec  aircube_app.py  aircube_data_visualizer.py  aircube_logger.py  aircube_replay_script.py  aircube_tray.py  build_exe.py  build_tray.py  requirements.txt  sensor_log.csv
scripts/mac/: AirCube Menu Bar.spec  aircube_menubar.py  aircube_menubar_setup.md
smartthings/: README.md  channel-driver-example.json  driver-channel.json
smartthings/aircube-zigbee/: config.yml  fingerprints.yml
z2m/: aircube.js
zha/: aircube.py
(+6 files in other folders)
